@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.55 2004/02/17 08:26:25 jlam Exp $
+# $NetBSD: Makefile,v 1.56 2004/02/17 16:50:26 jlam Exp $
 #
 # NOTE:	If you update this package, then you'll likely need to also update
 #	the x11-links dependency in mk/buildlink[23]/bsd.buildlink[23].mk
 #	to the correct version, usually the most recent.
 
-DISTNAME=	x11-links-0.22
+DISTNAME=	x11-links-0.23
 CATEGORIES=	pkgtools x11
 MASTER_SITES=	# empty
 DISTFILES=	# empty
