@@ -1,0 +1,12 @@
+# $NetBSD: xfree.Xft2,v 1.1 2004/02/17 16:50:26 jlam Exp $
+#
+include/X11/Xft/Xft.h
+include/X11/Xft/XftCompat.h
+lib/libXft.a
+lib/libXft.so
+lib/libXft.so.2
+lib/libXft.so.2.0
+lib/libXft.so.2.1
+lib/libXft.dylib
+lib/libXft.2.dylib
+lib/libXft.2.0.dylib
