@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.4883 2004/02/17 15:36:07 minskim Exp $
+$NetBSD: CHANGES,v 1.4884 2004/02/17 16:51:20 jlam Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -894,3 +894,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated elfsh to 0.51b3 [cube 2004-02-17]
 	Updated qiv to qiv [snj 2004-02-17]
 	Added chkrootkit-0.43 [minskim 2004-02-17]
+	Updated x11-links to 0.23 [jlam 2004-02-17]
